HRTH Emission Curve (#22)